# MLOps6_Project

./: .coveragerc  .gitignore  Dockerfile  HANDY_COMMANDS.md  Makefile  README.md  cloud_build.yaml  cloudbuild.yaml  config_cpu.yaml  config_gpu.yaml  data.dvc  docker-compose.yaml  models.dvc  pyproject.toml  requirements.txt  train_model.dockerfile
.dvc/: config
.github/workflows/: test_on_push.yml  tests_FEv2.yml
app/: main_fastapi.py  requirements_fastapi.txt
conf/: config.yaml  config_tests.yaml
conf/data/: default.yaml  default_tests.yaml  it1.yaml
conf/model/: default.yaml  default_tests.yaml
data/: raw.dvc
data/processed/: data_raw_train.pkl  train_labels.pt  validation_inputs.pt  validation_labels.pt  validation_masks.pt
dockerfiles/: fastapi.dockerfile  gpu_train_model.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops6_project_source/: __init__.py
models/: .gitignore  best_model.dvc  lightning_logs.dvc
reports/: README.md
reports/figures/: architecture.drawio
src/: __init__.py  load_models.py  predict_model.py  project_manager.py  train_model.py  train_model_legacy.py  train_model_lit.py  train_model_unrolled.py
src/common/: log_config.py
src/data/: dataset.py  load_data.py  make_dataset.py
src/features/: build_features.py
src/models/: model.py
src/utils/: utils.py
tests/: __init__.py  test_make_dataset  test_make_dataset.py  test_predict.py  test_train.py  test_train_mock.py  test_train_real_data.py
