[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
description = "Mlops Project of Transformer model for tweets classification"
authors = [
  { name = "Group 6", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:.*U.*mode is deprecated:DeprecationWarning',
]